--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -264,6 +264,15 @@ form input[type=text] {
 form input[type=text]:focus {
   text-indent: 0.3125rem;
 }
+form select{
+  border: 0.1875rem solid;
+  border-radius: 0.375rem;
+  padding: 0.75rem 1rem;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-bottom: 2rem;
+  transition: text-indent 300ms;
+}
 
 /**
  * Modal
@@ -293,6 +302,31 @@ form input[type=text]:focus {
   }
 }
 
+.edit-modal-dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.edit-modal-dialog.show {
+  display: flex;
+}
+@media (max-width: 767.98px) {
+  .edit-modal-dialog form {
+    width: 100%;
+  }
+}
+@media (min-width: 768px) {
+  .edit-modal-dialog form {
+    width: 43.75rem;
+  }
+}
+
 /**
  * Utilities
  */
@@ -305,4 +339,10 @@ form input[type=text]:focus {
   padding: 0;
   position: absolute;
   width: 1px;
+}
+
+em{
+  margin-top: 1.2rem;
+  margin-right: 1.2rem;
+  font-weight: 900;
 }
